Fixed safari form styling on iOS. Removed intro text for modal on phone.

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -105,5 +105,12 @@ input[type="submit"] {
   &.complete {
     background-color: $green-color;
     cursor: default;
+    &:hover {
+      border-color: $green-color;
+    }
+  }
+  &:hover {
+    background: $peach-color;
+    border-color: $peach-color;
   }
 }
